; ModuleID = '/home/carl/AnghaBench/micropython/ports/esp32/extr_network_ppp.c_pppos_client_task.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/esp32/extr_network_ppp.c_pppos_client_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i32, i32 }

@pdTRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @pppos_client_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pppos_client_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  %4 = alloca [256 x i32], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = bitcast i8* %7 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %8, %struct.TYPE_2__** %3, align 8
  br label %9

9:                                                ; preds = %28, %1
  %10 = load i32, i32* @pdTRUE, align 4
  %11 = call i64 @ulTaskNotifyTake(i32 %10, i32 0)
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %29

13:                                               ; preds = %9
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = getelementptr inbounds [256 x i32], [256 x i32]* %4, i64 0, i64 0
  %18 = call i32 @mp_stream_rw(i32 %16, i32* %17, i32 1024, i32* %5, i32 0)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp sgt i32 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %13
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = getelementptr inbounds [256 x i32], [256 x i32]* %4, i64 0, i64 0
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @pppos_input_tcpip(i32 %24, i32* %25, i32 %26)
  br label %28

28:                                               ; preds = %21, %13
  br label %9

29:                                               ; preds = %9
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  store i32* null, i32** %31, align 8
  %32 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i64 @ulTaskNotifyTake(i32, i32) #1

declare dso_local i32 @mp_stream_rw(i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @pppos_input_tcpip(i32, i32*, i32) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
